# xoshiro256starstar

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/xoshiro256starstar/: xoshiro256starstar.hpp
test/: CMakeLists.txt
test/source/: xoshiro256starstar_test.cpp
